# LLMBenchV1

./: .env.example  .gitignore  LICENSE  README.md  bench.sh  pyproject.toml  setup.sh
llm_bench/: __init__.py  backends.py  cli.py  detect.py  metrics.py  models.py  output.py  runner.py
llm_bench/prompts/: structured_extract.md
tests/unit/: test_benchmark_llm.py
