[project]
name = "llm-bench"
version = "0.1.0"
description = "Universal streaming LLM throughput benchmark — TTFT, TBT, and tokens/sec"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Andrii Voropai" },
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
llm-bench = "llm_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
